# celadon

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  Procfile  README.md  fly.toml  pyproject.toml  setup.cfg  setup.py  yoyo.ini
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
celadon/: application.py  auth.py  db.py  migrate.py  server.py  sessions.py  version.py
celadon/models/: __init__.py  customer.py  item.py  purchase.py  purchaser.py  sale.py  user.py  validator.py
celadon/static/: api.js  app.js  customers.js  index.html  login.html  sales.js  styles.css
db/: 01_init_db.sql  02_create_tables.sql  03_migrate_customers.sql  init_db.sql
docker/celadon/: Dockerfile
docker/celadon-migrator/: Dockerfile
frontend/: index.html  login.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/hooks/: useLoad.ts
frontend/src/pages/: CustomersPage.tsx  SalesPage.tsx
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service-db.yaml  service.yaml  statefulset.yaml
helm/templates/application/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
helm/templates/database/: _helpers.tpl  configmap.yaml  service.yaml  statefulset.yaml
migrations/: 0001.initial-schema.rollback.sql  0001.initial-schema.sql
src/: app.py  application.py  db.py  models.py  server.py
src/models/: __init__.py  item.py  purchase.py
tests/: conftest.py  test_application.py  test_auth.py  test_db.py  test_migrate.py  test_models.py  test_server.py
