[tool.poetry]
name = "celadon"
version = "0.2.0"
description = "API server for customer management"
authors = ["Peter Han <git@peterhan.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
gunicorn = "^23.0.0"
flask-cors = "^5.0.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.11.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
