[project]
name = "celadon"
version = "0.2.0"
description = "API server for customer management"
authors = [
    { name = "Peter Han", email = "git@peterhan.ca" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "gunicorn (>=25.2.0,<27.0.0)",
    "authlib (>=1.6.9,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pycodestyle (>=2.14.0,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
